# SphericalTexture

./: README.md  meta.yaml  pyproject.toml
.github/: build-upload.yml
.github/workflows/: build-upload.yml
dev/: env.yml
sphericaltexture/: __init__.py  plotting.py  spherical_texture.py
src/: __init__.py  objfeat_spherical_projection_base.py
tests/: test_spherical_texture.py
tests/snapshots/test_spherical_texture/test_sphericaltexture/projections0-2/: Intensity Spectrum_2D  Shape Polarization Direction_2D  Shape Spectrum_2D
tests/snapshots/test_spherical_texture/test_sphericaltexture/projections0-3/: Intensity Polarization Direction_3D  Shape Complex Decomposition_3D  Shape Condensed Spectrum_3D  Shape Polarization Direction_3D
tests/snapshots/test_spherical_texture/test_sphericaltexture/projections1-2/: Intensity Spectrum_2D
tests/snapshots/test_spherical_texture/test_sphericaltexture/projections1-3/: Intensity Full Projection_3D
tests/snapshots/test_spherical_texture/test_sphericaltexture/projections2-2/: Intensity Complex Decomposition_2D  Intensity Full Projection_2D  Shape Complex Decomposition_2D  Shape Condensed Spectrum_2D  Shape Full Projection_2D
tests/snapshots/test_spherical_texture/test_sphericaltexture/projections2-3/: Intensity Complex Decomposition_3D  Intensity Condensed Spectrum_3D  Intensity Polarization Direction_3D  Intensity Spectrum_3D  Shape Full Projection_3D  Shape Spectrum_3D
tests/test_data/: data_2D.tif  data_3D.tif  mask_2D.tif  mask_3D.tif
