[tool.poetry]
name = "SphericalTexture"
version = "0.0.3"
description = "Angular projections of 2/3D image objects and subsequent spherical harmonics analysis"
readme = "README.md"
authors = ["Oane Gros <oane.gros@embl.de>"]


[tool.poetry.dependencies]
python = ">= 3.9"
scikit-image = "*"
numba = "*"
pyshtools = "*"
ducc0 = "*"
scipy = "*"
appdirs = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-cov = "*"
pytest-snapshot = "*"

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"

[tool.setuptools_scm]

